// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration Setup Inputs Renders the S3 connector form as expected 1`] = `
<body>
  <div>
    <div
      class="euiForm"
    >
      <div
        class="euiText euiText--small"
      >
        <h2>
          Set Up Integration
        </h2>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiText euiText--medium"
      >
        <h3>
          Integration Details
        </h3>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="false"
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            Display Name
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText euiFieldText--compressed"
                data-test-subj="new-instance-name"
                id="random_html_id"
                placeholder="sample Integration"
                type="text"
                value="Test Instance Name"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiText euiText--medium"
      >
        <h3>
          Integration Connection
        </h3>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            Connection Type
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <select
                aria-describedby="random_html_id-help-0"
                class="euiSelect euiSelect--compressed"
                id="random_html_id"
              >
                <option
                  value="index"
                >
                  OpenSearch Index
                </option>
              </select>
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                      fill-rule="non-zero"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
          <div
            class="euiFormHelpText euiFormRow__text"
            id="random_html_id-help-0"
          >
            Select the type of connection to use for queries.
          </div>
        </div>
      </div>
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            Direct query connections
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            aria-describedby="random_html_id-help-0"
            aria-expanded="false"
            aria-haspopup="listbox"
            class="euiComboBox euiComboBox--compressed"
            data-test-subj="data-source-name"
            role="combobox"
          >
            <div
              class="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                class="euiFormControlLayout__childrenWrapper"
              >
                <div
                  class="euiComboBox__inputWrap euiComboBox__inputWrap--compressed euiComboBox__inputWrap--noWrap euiComboBox__inputWrap-isLoading euiComboBox__inputWrap-isClearable"
                  data-test-subj="comboBoxInput"
                  tabindex="-1"
                >
                  <span
                    class="euiComboBoxPill euiComboBoxPill--plainText"
                  >
                    ss4o_logs-nginx-test
                  </span>
                  <div
                    class="euiComboBox__input"
                    style="font-size: 14px; display: inline-block;"
                  >
                    <input
                      aria-controls=""
                      data-test-subj="comboBoxSearchInput"
                      id="random_html_id"
                      role="textbox"
                      style="box-sizing: content-box; width: 2px;"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
                <div
                  class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                >
                  <button
                    aria-label="Clear input"
                    class="euiFormControlLayoutClearButton euiFormControlLayoutClearButton--small"
                    data-test-subj="comboBoxClearButton"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--medium euiFormControlLayoutClearButton__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7.293 8 3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8Z"
                      />
                    </svg>
                  </button>
                  <span
                    class="euiLoadingSpinner euiLoadingSpinner--medium"
                  />
                  <button
                    aria-label="Open list of options"
                    class="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                    data-test-subj="comboBoxToggleListButton"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                        fill-rule="non-zero"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiFormHelpText euiFormRow__text"
            id="random_html_id-help-0"
          >
            Select a data source to pull the data from.
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiText euiText--medium"
      >
        <h3>
          Query Fields
        </h3>
      </div>
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiText euiText--extraSmall euiText--constrainedWidth"
            id="random_html_id"
          >
            <p>
              To set up the integration, we need to know some information about how to process your data.
            </p>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="true"
            class="euiFormLabel euiFormRow__label euiFormLabel-isInvalid"
            for="random_html_id"
          >
            Spark Table Name
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-describedby="random_html_id-help-0 random_html_id-error-0"
                class="euiFieldText euiFieldText--compressed"
                id="random_html_id"
                placeholder="sample"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            aria-live="polite"
            class="euiFormErrorText euiFormRow__text"
            id="random_html_id-error-0"
          >
            Must be at least 1 character.
          </div>
          <div
            class="euiFormHelpText euiFormRow__text"
            id="random_html_id-help-0"
          >
            Select a table name to associate with your data.
          </div>
        </div>
      </div>
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            Database Name
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-describedby="random_html_id-help-0"
                class="euiFieldText euiFieldText--compressed"
                id="random_html_id"
                placeholder="default"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="euiFormHelpText euiFormRow__text"
            id="random_html_id-help-0"
          >
            Enter the name of the database to store your data. The 'default' database will be used if no input is provided.
          </div>
        </div>
      </div>
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            Initial Data Range
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiSwitch euiSwitch--primary euiSwitch--compressed"
          >
            <button
              aria-checked="false"
              aria-labelledby="random_html_id"
              class="euiSwitch__button"
              id="random_html_id"
              role="switch"
              type="button"
            >
              <span
                class="euiSwitch__body"
              >
                <span
                  class="euiSwitch__thumb"
                />
                <span
                  class="euiSwitch__track"
                />
              </span>
            </button>
            <span
              class="euiSwitch__label"
              id="random_html_id"
            >
              Load all data (no time limit)
            </span>
          </div>
          <div
            class="euiFormHelpText euiFormRow__text"
            id="random_html_id-help-0"
          >
            Select the start date for the initial data to include. Data from this date to now will be loaded.
          </div>
        </div>
      </div>
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="false"
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            S3 Data Location
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText euiFieldText--compressed"
                id="random_html_id"
                placeholder="s3://"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="false"
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            S3 Checkpoint Location
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-describedby="random_html_id-help-0"
                class="euiFieldText euiFieldText--compressed"
                id="random_html_id"
                placeholder="s3://"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="euiFormHelpText euiFormRow__text"
            id="random_html_id-help-0"
          >
            The Checkpoint location must be a unique directory and not the same as the Data location. It will be used for caching intermediary results.
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiText euiText--medium"
      >
        <h3>
          Integration Resources
        </h3>
      </div>
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiText euiText--extraSmall euiText--constrainedWidth"
            id="random_html_id"
          >
            <p>
              This integration offers different kinds of resources compatible with your data source. These can include dashboards, visualizations, indexes, and queries. Select at least one of the following options.
            </p>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--hasBorder euiPanel--flexGrowZero euiSplitPanel euiSplitPanel--row euiCheckableCard euiCheckableCard-isChecked"
          >
            <div
              class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--primary euiPanel--noShadow euiPanel--noBorder euiPanel--flexGrowZero euiPanel--isClickable euiSplitPanel__inner"
            >
              <div
                class="euiCheckbox euiCheckbox--noLabel"
              >
                <input
                  class="euiCheckbox__input"
                  id="workflow-checkbox-workflow1"
                  type="checkbox"
                  value="workflow1"
                />
                <div
                  class="euiCheckbox__square"
                />
              </div>
            </div>
            <div
              class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
            >
              <label
                aria-describedby="workflow-checkbox-workflow1-details"
                class="euiCheckableCard__label"
                for="workflow-checkbox-workflow1"
              >
                Workflow 1
              </label>
              <div
                class="euiCheckableCard__children"
                id="workflow-checkbox-workflow1-details"
              >
                This is a test workflow.
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--l"
      />
      <div
        class="euiSpacer euiSpacer--l"
      />
    </div>
  </div>
</body>
`;

exports[`Integration Setup Inputs Renders the S3 connector form without workflows 1`] = `
<body>
  <div>
    <div
      class="euiForm"
    >
      <div
        class="euiText euiText--small"
      >
        <h2>
          Set Up Integration
        </h2>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiText euiText--medium"
      >
        <h3>
          Integration Details
        </h3>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="false"
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            Display Name
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText euiFieldText--compressed"
                data-test-subj="new-instance-name"
                id="random_html_id"
                placeholder="sample Integration"
                type="text"
                value="Test Instance Name"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiText euiText--medium"
      >
        <h3>
          Integration Connection
        </h3>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            Connection Type
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <select
                aria-describedby="random_html_id-help-0"
                class="euiSelect euiSelect--compressed"
                id="random_html_id"
              >
                <option
                  value="index"
                >
                  OpenSearch Index
                </option>
              </select>
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                      fill-rule="non-zero"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
          <div
            class="euiFormHelpText euiFormRow__text"
            id="random_html_id-help-0"
          >
            Select the type of connection to use for queries.
          </div>
        </div>
      </div>
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            Direct query connections
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            aria-describedby="random_html_id-help-0"
            aria-expanded="false"
            aria-haspopup="listbox"
            class="euiComboBox euiComboBox--compressed"
            data-test-subj="data-source-name"
            role="combobox"
          >
            <div
              class="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                class="euiFormControlLayout__childrenWrapper"
              >
                <div
                  class="euiComboBox__inputWrap euiComboBox__inputWrap--compressed euiComboBox__inputWrap--noWrap euiComboBox__inputWrap-isLoading euiComboBox__inputWrap-isClearable"
                  data-test-subj="comboBoxInput"
                  tabindex="-1"
                >
                  <span
                    class="euiComboBoxPill euiComboBoxPill--plainText"
                  >
                    ss4o_logs-nginx-test
                  </span>
                  <div
                    class="euiComboBox__input"
                    style="font-size: 14px; display: inline-block;"
                  >
                    <input
                      aria-controls=""
                      data-test-subj="comboBoxSearchInput"
                      id="random_html_id"
                      role="textbox"
                      style="box-sizing: content-box; width: 2px;"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
                <div
                  class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                >
                  <button
                    aria-label="Clear input"
                    class="euiFormControlLayoutClearButton euiFormControlLayoutClearButton--small"
                    data-test-subj="comboBoxClearButton"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--medium euiFormControlLayoutClearButton__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7.293 8 3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8Z"
                      />
                    </svg>
                  </button>
                  <span
                    class="euiLoadingSpinner euiLoadingSpinner--medium"
                  />
                  <button
                    aria-label="Open list of options"
                    class="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                    data-test-subj="comboBoxToggleListButton"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                        fill-rule="non-zero"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiFormHelpText euiFormRow__text"
            id="random_html_id-help-0"
          >
            Select a data source to pull the data from.
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiText euiText--medium"
      >
        <h3>
          Query Fields
        </h3>
      </div>
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiText euiText--extraSmall euiText--constrainedWidth"
            id="random_html_id"
          >
            <p>
              To set up the integration, we need to know some information about how to process your data.
            </p>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="true"
            class="euiFormLabel euiFormRow__label euiFormLabel-isInvalid"
            for="random_html_id"
          >
            Spark Table Name
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-describedby="random_html_id-help-0 random_html_id-error-0"
                class="euiFieldText euiFieldText--compressed"
                id="random_html_id"
                placeholder="sample"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            aria-live="polite"
            class="euiFormErrorText euiFormRow__text"
            id="random_html_id-error-0"
          >
            Must be at least 1 character.
          </div>
          <div
            class="euiFormHelpText euiFormRow__text"
            id="random_html_id-help-0"
          >
            Select a table name to associate with your data.
          </div>
        </div>
      </div>
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            Database Name
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-describedby="random_html_id-help-0"
                class="euiFieldText euiFieldText--compressed"
                id="random_html_id"
                placeholder="default"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="euiFormHelpText euiFormRow__text"
            id="random_html_id-help-0"
          >
            Enter the name of the database to store your data. The 'default' database will be used if no input is provided.
          </div>
        </div>
      </div>
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            Initial Data Range
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiSwitch euiSwitch--primary euiSwitch--compressed"
          >
            <button
              aria-checked="false"
              aria-labelledby="random_html_id"
              class="euiSwitch__button"
              id="random_html_id"
              role="switch"
              type="button"
            >
              <span
                class="euiSwitch__body"
              >
                <span
                  class="euiSwitch__thumb"
                />
                <span
                  class="euiSwitch__track"
                />
              </span>
            </button>
            <span
              class="euiSwitch__label"
              id="random_html_id"
            >
              Load all data (no time limit)
            </span>
          </div>
          <div
            class="euiFormHelpText euiFormRow__text"
            id="random_html_id-help-0"
          >
            Select the start date for the initial data to include. Data from this date to now will be loaded.
          </div>
        </div>
      </div>
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="false"
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            S3 Data Location
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText euiFieldText--compressed"
                id="random_html_id"
                placeholder="s3://"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="false"
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            S3 Checkpoint Location
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-describedby="random_html_id-help-0"
                class="euiFieldText euiFieldText--compressed"
                id="random_html_id"
                placeholder="s3://"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="euiFormHelpText euiFormRow__text"
            id="random_html_id-help-0"
          >
            The Checkpoint location must be a unique directory and not the same as the Data location. It will be used for caching intermediary results.
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiText euiText--medium"
      >
        <h3>
          Integration Resources
        </h3>
      </div>
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiText euiText--extraSmall euiText--constrainedWidth"
            id="random_html_id"
          >
            <p>
              This integration offers different kinds of resources compatible with your data source. These can include dashboards, visualizations, indexes, and queries. Select at least one of the following options.
            </p>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--hasBorder euiPanel--flexGrowZero euiSplitPanel euiSplitPanel--row euiCheckableCard euiCheckableCard-isChecked"
          >
            <div
              class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--primary euiPanel--noShadow euiPanel--noBorder euiPanel--flexGrowZero euiPanel--isClickable euiSplitPanel__inner"
            >
              <div
                class="euiCheckbox euiCheckbox--noLabel"
              >
                <input
                  class="euiCheckbox__input"
                  id="workflow-checkbox-workflow1"
                  type="checkbox"
                  value="workflow1"
                />
                <div
                  class="euiCheckbox__square"
                />
              </div>
            </div>
            <div
              class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
            >
              <label
                aria-describedby="workflow-checkbox-workflow1-details"
                class="euiCheckableCard__label"
                for="workflow-checkbox-workflow1"
              >
                Workflow 1
              </label>
              <div
                class="euiCheckableCard__children"
                id="workflow-checkbox-workflow1-details"
              >
                This is a test workflow.
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--l"
      />
      <div
        class="euiSpacer euiSpacer--l"
      />
    </div>
  </div>
</body>
`;

exports[`Integration Setup Inputs Renders the connection inputs 1`] = `
<body>
  <div>
    <div
      class="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="random_html_id"
        >
          Connection Type
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout euiFormControlLayout--compressed"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <select
              aria-describedby="random_html_id-help-0"
              class="euiSelect euiSelect--compressed"
              id="random_html_id"
            >
              <option
                value="index"
              >
                OpenSearch Index
              </option>
            </select>
            <div
              class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                    fill-rule="non-zero"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="euiFormHelpText euiFormRow__text"
          id="random_html_id-help-0"
        >
          Select the type of connection to use for queries.
        </div>
      </div>
    </div>
    <div
      class="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="random_html_id"
        >
          Direct query connections
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          aria-describedby="random_html_id-help-0"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="euiComboBox euiComboBox--compressed"
          data-test-subj="data-source-name"
          role="combobox"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <div
                class="euiComboBox__inputWrap euiComboBox__inputWrap--compressed euiComboBox__inputWrap--noWrap euiComboBox__inputWrap-isLoading euiComboBox__inputWrap-isClearable"
                data-test-subj="comboBoxInput"
                tabindex="-1"
              >
                <span
                  class="euiComboBoxPill euiComboBoxPill--plainText"
                >
                  ss4o_logs-nginx-test
                </span>
                <div
                  class="euiComboBox__input"
                  style="font-size: 14px; display: inline-block;"
                >
                  <input
                    aria-controls=""
                    data-test-subj="comboBoxSearchInput"
                    id="random_html_id"
                    role="textbox"
                    style="box-sizing: content-box; width: 2px;"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <button
                  aria-label="Clear input"
                  class="euiFormControlLayoutClearButton euiFormControlLayoutClearButton--small"
                  data-test-subj="comboBoxClearButton"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--medium euiFormControlLayoutClearButton__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.293 8 3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8Z"
                    />
                  </svg>
                </button>
                <span
                  class="euiLoadingSpinner euiLoadingSpinner--medium"
                />
                <button
                  aria-label="Open list of options"
                  class="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                  data-test-subj="comboBoxToggleListButton"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                      fill-rule="non-zero"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormHelpText euiFormRow__text"
          id="random_html_id-help-0"
        >
          Select a data source to pull the data from.
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Integration Setup Inputs Renders the connection inputs with a locked connection type 1`] = `
<body>
  <div>
    <div
      class="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="random_html_id"
        >
          Connection Type
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout euiFormControlLayout--compressed"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <select
              aria-describedby="random_html_id-help-0"
              class="euiSelect euiSelect--compressed"
              disabled=""
              id="random_html_id"
            >
              <option
                value="index"
              >
                OpenSearch Index
              </option>
            </select>
            <div
              class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
            >
              <span
                class="euiFormControlLayoutCustomIcon"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                    fill-rule="non-zero"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="euiFormHelpText euiFormRow__text"
          id="random_html_id-help-0"
        >
          Select the type of connection to use for queries.
        </div>
      </div>
    </div>
    <div
      class="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="random_html_id"
        >
          Direct query connections
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          aria-describedby="random_html_id-help-0"
          aria-expanded="false"
          aria-haspopup="listbox"
          class="euiComboBox euiComboBox--compressed euiComboBox-isDisabled"
          data-test-subj="data-source-name"
          role="combobox"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <div
                class="euiComboBox__inputWrap euiComboBox__inputWrap--compressed euiComboBox__inputWrap--noWrap euiComboBox__inputWrap-isLoading"
                data-test-subj="comboBoxInput"
                tabindex="-1"
              >
                <span
                  class="euiComboBoxPill euiComboBoxPill--plainText"
                >
                  ss4o_logs-nginx-test
                </span>
                <div
                  class="euiComboBox__input"
                  style="font-size: 14px; display: inline-block;"
                >
                  <input
                    aria-controls=""
                    data-test-subj="comboBoxSearchInput"
                    disabled=""
                    id="random_html_id"
                    role="textbox"
                    style="box-sizing: content-box; width: 2px;"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <span
                  class="euiLoadingSpinner euiLoadingSpinner--medium"
                />
                <button
                  aria-label="Open list of options"
                  class="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                  data-test-subj="comboBoxToggleListButton"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                      fill-rule="non-zero"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFormHelpText euiFormRow__text"
          id="random_html_id-help-0"
        >
          Select a data source to pull the data from.
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Integration Setup Inputs Renders the details inputs 1`] = `
<body>
  <div>
    <div
      class="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          aria-invalid="false"
          class="euiFormLabel euiFormRow__label"
          for="random_html_id"
        >
          Display Name
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout euiFormControlLayout--compressed"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              class="euiFieldText euiFieldText--compressed"
              data-test-subj="new-instance-name"
              id="random_html_id"
              placeholder="sample Integration"
              type="text"
              value="Test Instance Name"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Integration Setup Inputs Renders the index form as expected 1`] = `
<body>
  <div>
    <div
      class="euiForm"
    >
      <div
        class="euiText euiText--small"
      >
        <h2>
          Set Up Integration
        </h2>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiText euiText--medium"
      >
        <h3>
          Integration Details
        </h3>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="false"
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            Display Name
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText euiFieldText--compressed"
                data-test-subj="new-instance-name"
                id="random_html_id"
                placeholder="sample Integration"
                type="text"
                value="Test Instance Name"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiText euiText--medium"
      >
        <h3>
          Integration Connection
        </h3>
      </div>
      <div
        class="euiSpacer euiSpacer--s"
      />
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            Connection Type
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <select
                aria-describedby="random_html_id-help-0"
                class="euiSelect euiSelect--compressed"
                id="random_html_id"
              >
                <option
                  value="index"
                >
                  OpenSearch Index
                </option>
              </select>
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
          <div
            class="euiFormHelpText euiFormRow__text"
            id="random_html_id-help-0"
          >
            Select the type of connection to use for queries.
          </div>
        </div>
      </div>
      <div
        class="euiFormRow euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            Index
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            aria-describedby="random_html_id-help-0"
            aria-expanded="false"
            aria-haspopup="listbox"
            class="euiComboBox euiComboBox--compressed"
            data-test-subj="data-source-name"
            role="combobox"
          >
            <div
              class="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                class="euiFormControlLayout__childrenWrapper"
              >
                <div
                  class="euiComboBox__inputWrap euiComboBox__inputWrap--compressed euiComboBox__inputWrap--noWrap euiComboBox__inputWrap-isLoading euiComboBox__inputWrap-isClearable"
                  data-test-subj="comboBoxInput"
                  tabindex="-1"
                >
                  <span
                    class="euiComboBoxPill euiComboBoxPill--plainText"
                  >
                    ss4o_logs-nginx-test
                  </span>
                  <div
                    class="euiComboBox__input"
                    style="font-size: 14px; display: inline-block;"
                  >
                    <input
                      aria-controls=""
                      data-test-subj="comboBoxSearchInput"
                      id="random_html_id"
                      role="textbox"
                      style="box-sizing: content-box; width: 2px;"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
                <div
                  class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                >
                  <button
                    aria-label="Clear input"
                    class="euiFormControlLayoutClearButton euiFormControlLayoutClearButton--small"
                    data-test-subj="comboBoxClearButton"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutClearButton__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                      />
                    </svg>
                  </button>
                  <span
                    class="euiLoadingSpinner euiLoadingSpinner--medium"
                  />
                  <button
                    aria-label="Open list of options"
                    class="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                    data-test-subj="comboBoxToggleListButton"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiFormHelpText euiFormRow__text"
            id="random_html_id-help-0"
          >
            Select an index to pull the data from.
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Integration Setup Inputs Renders the query inputs 1`] = `
<body>
  <div>
    <div
      class="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          aria-invalid="true"
          class="euiFormLabel euiFormRow__label euiFormLabel-isInvalid"
          for="random_html_id"
        >
          Spark Table Name
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout euiFormControlLayout--compressed"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-describedby="random_html_id-help-0 random_html_id-error-0"
              class="euiFieldText euiFieldText--compressed"
              id="random_html_id"
              placeholder="sample"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          aria-live="polite"
          class="euiFormErrorText euiFormRow__text"
          id="random_html_id-error-0"
        >
          Must be at least 1 character.
        </div>
        <div
          class="euiFormHelpText euiFormRow__text"
          id="random_html_id-help-0"
        >
          Select a table name to associate with your data.
        </div>
      </div>
    </div>
    <div
      class="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="random_html_id"
        >
          Database Name
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout euiFormControlLayout--compressed"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-describedby="random_html_id-help-0"
              class="euiFieldText euiFieldText--compressed"
              id="random_html_id"
              placeholder="default"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="euiFormHelpText euiFormRow__text"
          id="random_html_id-help-0"
        >
          Enter the name of the database to store your data. The 'default' database will be used if no input is provided.
        </div>
      </div>
    </div>
    <div
      class="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="random_html_id"
        >
          Initial Data Range
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiSwitch euiSwitch--primary euiSwitch--compressed"
        >
          <button
            aria-checked="false"
            aria-labelledby="random_html_id"
            class="euiSwitch__button"
            id="random_html_id"
            role="switch"
            type="button"
          >
            <span
              class="euiSwitch__body"
            >
              <span
                class="euiSwitch__thumb"
              />
              <span
                class="euiSwitch__track"
              />
            </span>
          </button>
          <span
            class="euiSwitch__label"
            id="random_html_id"
          >
            Load all data (no time limit)
          </span>
        </div>
        <div
          class="euiFormHelpText euiFormRow__text"
          id="random_html_id-help-0"
        >
          Select the start date for the initial data to include. Data from this date to now will be loaded.
        </div>
      </div>
    </div>
    <div
      class="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          aria-invalid="false"
          class="euiFormLabel euiFormRow__label"
          for="random_html_id"
        >
          S3 Data Location
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout euiFormControlLayout--compressed"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              class="euiFieldText euiFieldText--compressed"
              id="random_html_id"
              placeholder="s3://"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          aria-invalid="false"
          class="euiFormLabel euiFormRow__label"
          for="random_html_id"
        >
          S3 Checkpoint Location
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout euiFormControlLayout--compressed"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              aria-describedby="random_html_id-help-0"
              class="euiFieldText euiFieldText--compressed"
              id="random_html_id"
              placeholder="s3://"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="euiFormHelpText euiFormRow__text"
          id="random_html_id-help-0"
        >
          The Checkpoint location must be a unique directory and not the same as the Data location. It will be used for caching intermediary results.
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Integration Setup Inputs Renders the workflows inputs 1`] = `
<body>
  <div>
    <div
      class="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--hasBorder euiPanel--flexGrowZero euiSplitPanel euiSplitPanel--row euiCheckableCard euiCheckableCard-isChecked"
        >
          <div
            class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--primary euiPanel--noShadow euiPanel--noBorder euiPanel--flexGrowZero euiPanel--isClickable euiSplitPanel__inner"
          >
            <div
              class="euiCheckbox euiCheckbox--noLabel"
            >
              <input
                class="euiCheckbox__input"
                id="workflow-checkbox-workflow1"
                type="checkbox"
                value="workflow1"
              />
              <div
                class="euiCheckbox__square"
              />
            </div>
          </div>
          <div
            class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
          >
            <label
              aria-describedby="workflow-checkbox-workflow1-details"
              class="euiCheckableCard__label"
              for="workflow-checkbox-workflow1"
            >
              Workflow 1
            </label>
            <div
              class="euiCheckableCard__children"
              id="workflow-checkbox-workflow1-details"
            >
              This is a test workflow.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Integration Setup Inputs Renders the workflows inputs with conditional workflows 1`] = `
<body>
  <div>
    <div
      class="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--hasBorder euiPanel--flexGrowZero euiSplitPanel euiSplitPanel--row euiCheckableCard euiCheckableCard-isChecked"
        >
          <div
            class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--primary euiPanel--noShadow euiPanel--noBorder euiPanel--flexGrowZero euiPanel--isClickable euiSplitPanel__inner"
          >
            <div
              class="euiCheckbox euiCheckbox--noLabel"
            >
              <input
                class="euiCheckbox__input"
                id="workflow-checkbox-workflow1"
                type="checkbox"
                value="workflow1"
              />
              <div
                class="euiCheckbox__square"
              />
            </div>
          </div>
          <div
            class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusNone euiPanel--transparent euiPanel--noShadow euiPanel--noBorder euiSplitPanel__inner"
          >
            <label
              aria-describedby="workflow-checkbox-workflow1-details"
              class="euiCheckableCard__label"
              for="workflow-checkbox-workflow1"
            >
              Workflow 1
            </label>
            <div
              class="euiCheckableCard__children"
              id="workflow-checkbox-workflow1-details"
            >
              This is a test workflow.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
